# pons

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  Makefile  compile_commands.json  compile_commands_rp2040.json  library.json  pons.hpp  todo.md
cmake/: pons-config.cmake.in
core/core_async/: CMakeLists.txt  base_future.hpp  base_promise.hpp  core_async_test.cpp  i_future.hpp  i_promise.hpp  semaphore_concept.hpp
core/logger/: CMakeLists.txt  i_logger.hpp  log.hpp  logger.cpp  logger.hpp
core/logger/console_logger/: CMakeLists.txt  console_logger.cpp  console_logger.hpp  console_logger_test.cpp
core/mutex/: CMakeLists.txt  mutex.hpp
core/result/: CMakeLists.txt  result.hpp  result_test.cpp
core/semaphore/: CMakeLists.txt  semaphore.hpp
core/serializer/: CMakeLists.txt  serializer.hpp  serializer_test.cpp
core/store/: i_store.hpp
hal/ble_hal/: CMakeLists.txt  i_ble_hal.hpp
hal/esp32/: .clangd
hal/esp32/esp32_async/: CMakeLists.txt  esp32_semaphore.hpp
hal/esp32/esp32_ble_hal/: CMakeLists.txt  ble_hal.cpp  ble_hal.hpp
hal/esp32/esp32_http_client/: CMakeLists.txt  http_client.cpp  http_client.hpp
hal/esp32/esp32_logger/: CMakeLists.txt  esp32_logger.cpp  esp32_logger.hpp  logger.cpp
hal/esp32/esp32_mqtt/: CMakeLists.txt  mqtt_client.cpp  mqtt_client.hpp
hal/esp32/esp32_serial_hal/: CMakeLists.txt  esp32_serial_hal.cpp  esp32_serial_hal.hpp  serial_hal.cpp  serial_hal.hpp
hal/esp32/esp32_store/nvs_store/: CMakeLists.txt  nvs_store.cpp  nvs_store.hpp
hal/esp32/tests/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.defaults
hal/esp32/tests/main/: CMakeLists.txt  Kconfig.projbuild  ble_hal_test.cpp  ble_hal_test.hpp  http_client_test.cpp  http_client_test.hpp  logger_test.cpp  logger_test.hpp  main.cpp  nvs_store_test.cpp  nvs_store_test.hpp  semaphore_test.cpp  serial_hal_test.cpp  serial_hal_test.hpp
hal/http_client/: CMakeLists.txt  i_http_client.hpp
hal/mqtt_hal/: CMakeLists.txt  mqtt_hal.hpp
hal/posix/posix_async/: CMakeLists.txt  posix_async_test.cpp  posix_semaphore.hpp
hal/posix/posix_serial_hal/: CMakeLists.txt  posix_serial_hal.cpp  posix_serial_hal.hpp  posix_serial_hal_test.cpp  serial_hal.cpp  serial_hal.hpp
hal/rp2040/: .clangd
hal/rp2040/rp2040_async/: CMakeLists.txt  rp2040_semaphore.hpp
hal/rp2040/rp2040_serial_hal/: CMakeLists.txt  rp2040_serial_hal.cpp  rp2040_serial_hal.hpp  serial_hal.cpp  serial_hal.hpp
hal/rp2040/tests/: .clangd  CMakeLists.txt
hal/rp2040/tests/main/: CMakeLists.txt  main.cpp  semaphore_test.cpp  semaphore_test.hpp  serial_hal_test.cpp
hal/serial_hal/: CMakeLists.txt  i_serial_hal.hpp  serial_hal.hpp
hal/store/: CMakeLists.txt  i_store.hpp
platform/: CMakeLists.txt  platform_mutex.hpp  platform_semaphore.hpp
platform/esp32/platform_async/: CMakeLists.txt  future.hpp  promise.hpp  semaphore.hpp
platform/posix/platform_async/: CMakeLists.txt  semaphore.hpp
platform/rp2040/platform_async/: CMakeLists.txt  semaphore.hpp
transport/: CMakeLists.txt  data.hpp  dispatcher.hpp  i_transport.hpp  protocol.hpp  transport.md  transport_data.hpp  transport_data_test.cpp  transporter.hpp
transport/chunked_transport/: CMakeLists.txt  chunked_receiver.cpp  chunked_receiver.hpp  chunked_receiver_test.cpp  chunked_sender.cpp  chunked_sender.hpp  chunked_sender_test.cpp  chunked_transporter.cpp  chunked_transporter.hpp  chunked_transporter_test.cpp  packet.hpp
transport/chunked_transport/ble_transport/: CMakeLists.txt  ble_transport_test.cpp  ble_transporter.cpp  ble_transporter.hpp
transport/chunked_transport/serial_transport/: CMakeLists.txt  serial_transport_test.cpp  serial_transporter.cpp  serial_transporter.hpp
transport/dispatcher/: CMakeLists.txt  dispatcher.hpp  dispatcher_test.cpp  serialized_dispatcher.hpp  serialized_dispatcher_test.cpp
transport/protocol/: base_protocol.cpp  base_protocol.hpp  multiplexer.hpp  protocol.hpp
transport/protocol/chunked_protocol/: chunked_protocol.hpp
transport/requester/: CMakeLists.txt  requester.h  requester.hpp  requester_test.cpp  serialized_requester.hpp  serialized_requester_test.cpp
transport/serial_transporter/: serial_transporter.cpp  serial_transporter.hpp
transport/transporter/: CMakeLists.txt  base_transporter.cpp  base_transporter.hpp  base_transporter_test.cpp  multiplexer.hpp  multiplexer_test.cpp  transporter.hpp
transport/transporter/chunked_transporter/: CMakeLists.txt  chunked_transporter.hpp  chunked_transporter_test.cpp  packet.hpp  packet_test.cpp
transport/transporter/direct_transporter/: CMakeLists.txt  direct_transporter.hpp  direct_transporter_test.cpp
transport/transporter/serial_transporter/: CMakeLists.txt  serial_transporter.cpp  serial_transporter.hpp  serial_transporter_test.cpp
